tests/expectations/compiler/constructor/empty_constructor_fail.out
Error [ETYC0372126]: A 'custom' constructor cannot be empty
    --> compiler-test:4:5
     |
   4 |     @custom
     |     ^^^^^^^
   5 |     async constructor() {}
     |     ^^^^^^^^^^^^^^^^^^^^^^
